massive visual upgrade, bunch of UI bugs squashed

--- a/www/font.css
+++ b/www/font.css
@@ -4,7 +4,7 @@
   font-family: 'Cormorant Infant';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/cormorant-infant-v17-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-300italic - latin */
@@ -13,7 +13,7 @@
   font-family: 'Cormorant Infant';
   font-style: italic;
   font-weight: 300;
-  src: url('../fonts/cormorant-infant-v17-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-regular - latin */
@@ -22,7 +22,7 @@
   font-family: 'Cormorant Infant';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/cormorant-infant-v17-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-italic - latin */
@@ -31,7 +31,7 @@
   font-family: 'Cormorant Infant';
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/cormorant-infant-v17-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-500 - latin */
@@ -40,7 +40,7 @@
   font-family: 'Cormorant Infant';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/cormorant-infant-v17-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-500italic - latin */
@@ -49,7 +49,7 @@
   font-family: 'Cormorant Infant';
   font-style: italic;
   font-weight: 500;
-  src: url('../fonts/cormorant-infant-v17-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-600 - latin */
@@ -58,16 +58,14 @@
   font-family: 'Cormorant Infant';
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/cormorant-infant-v17-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-
-/* cormorant-infant-600italic - latin */
-@font-face {
+/* cormorant-infant-600italic - latin */ @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
   font-family: 'Cormorant Infant';
   font-style: italic;
   font-weight: 600;
-  src: url('../fonts/cormorant-infant-v17-latin-600italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-600italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-700 - latin */
@@ -76,7 +74,7 @@
   font-family: 'Cormorant Infant';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/cormorant-infant-v17-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* cormorant-infant-700italic - latin */
@@ -85,5 +83,46 @@
   font-family: 'Cormorant Infant';
   font-style: italic;
   font-weight: 700;
-  src: url('../fonts/cormorant-infant-v17-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('fonts/cormorant-infant-v17-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Aleo';
+  src: url("fonts/Aleo-variable.woff2") format("woff2-variations");
+  font-weight: 125 950;
+}
+
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Martian Mono';
+  src: url("fonts/MartianMono-VariableFont_TEST.woff2") format("woff2-variations");
+  font-weight: 125 950;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Atkinson Hyperlegible";
+  font-weight: 700;
+  src: url("fonts/Atkinson-Hyperlegible-Bold-102a.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Atkinson Hyperlegible";
+  font-style: italic;
+  font-weight: 400;
+  src: url("fonts/Atkinson-Hyperlegible-Italic-102a.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Atkinson Hyperlegible";
+  font-weight: 400;
+  src: url("fonts/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Atkinson Hyperlegible";
+  font-style: italic;
+  font-weight: 700;
+  src: url("fonts/Atkinson-Hyperlegible-BoldItalic-102a.woff2") format("woff2");
 }
